--- a/css/resume.css
+++ b/css/resume.css
@@ -1,13 +1,19 @@
 *{
+	margin:0;
 	--main-bg-color : #423f3e;
 	--main-sideMenu : #5aedc5;
 }
-body{background-color: var(--main-bg-color);margin:0;}
-.wrapper{width: 100%;height: 100%;background-color: var(--main-bg-color);}
-	.innerwrapper{width: 100%;height: 100%;background-color: var(--main-bg-color);margin: auto;}
-		.left{width: 20%; height: 100%; background-color: black; float: left;}
-			.leftsidebar-inner{width: 238px; height: 904px; background-color: black; padding: 22.500px 22.500px 22.500px 22.500px;margin:auto;}
-				.mainlogo{width: auto; height: 20%; background-color: green; padding: 10% 10% 10% 10%; float: top; margin: auto;}
-				.leftsidemenubar{width: 100%; height: 10%;background-color: white; padding: 10% 0% 10% 0%; float: top; margin: auto;}
-		.mainscreen{width: 60%;height: 100%; background-color:var(--main-bg-color); float: left;}
-		.right{width: 20%;height: 100%; background-color: yellow; float: left;}
+body{background-color: var(--main-bg-color);}
+.wrapper{width: 100%;height: 1000px;}
+	
+	.innerwrapper{width: 100%;height: 100%;background-color: var(--main-bg-color); margin: auto;}
+		
+		.left{width: 25%; height: 100%; background-color: #5aedc5; float: left;}
+			.leftsidebar-inner{width: 238px; height: 904px; background-color: #5aedc5; padding: 22.500px 22.500px 22.500px 22.500px;margin:auto;}
+				.mainlogo{width: auto; height: 20%; background-color: #5aedc5; padding: 10% 10% 10% 10%; float: top; margin: auto;}
+				.leftsidemenubar{width: 100%; height: 10%;background-color: #5aedc5; padding: 10% 0% 10% 0%; float: top; margin: auto;text-align-last: center;}
+		
+		.mainscreen{width: 60%;height: 100%; background-color:red; float: left; margin: auto;}
+			.main-inner{width: 100%; height: 10%; background-color: black; float: top;}
+		
+		.right{width: 15%;height: 100%; background-color: yellow; float: right;margin: auto;}
