--- a/css/resume.css
+++ b/css/resume.css
@@ -6,12 +6,12 @@
 body{background-color: var(--main-bg-color);}
 .wrapper{width: 100%;height: 1000px;}
 	
-	.innerwrapper{width: 100%;height: 100%;background-color: var(--main-bg-color); margin: auto;}
+	.innerwrapper{width: 100%;height: 100%; margin: auto;}
 		
 		.left{width: 25%; height: 100%; background-color: #5aedc5; float: left;}
-			.leftsidebar-inner{width: 238px; height: 904px; background-color: #5aedc5; padding: 22.500px 22.500px 22.500px 22.500px;margin:auto;}
+			.leftsidebar-inner{width: 238px; height: 904px; background-color: #5aedc5; padding: 22.500px 22.500px 22.500px 22.500px; margin:auto;}
 				.mainlogo{width: auto; height: 20%; background-color: #5aedc5; padding: 10% 10% 10% 10%; float: top; margin: auto;}
-				.leftsidemenubar{width: 100%; height: 10%;background-color: #5aedc5; padding: 10% 0% 10% 0%; float: top; margin: auto;text-align-last: center;}
+				.leftsidemenubar{width: 100%; height: 10%;background-color: #5aedc5; padding: 20% 0% 10% 0%; float: top; margin: auto;text-align-last: center;}
 		
 		.mainscreen{width: 60%;height: 100%; background-color:red; float: left; margin: auto;}
 			.main-inner{width: 100%; height: 10%; background-color: black; float: top;}
